Use KisAirbrushOptionProperties instead of KisAirbrushOptionWidget

A KisPaintOp cannot create QWidget based objects because it doesn't
run in the gui thread.

BUG:392190

Special thanks to Peter Eszlari for finding the commit that
introduced the bug!

(cherry picked from commit 39e5b30dac0db2108e87196d45e0703bf3a7cdeb)