plugins/paintops/deform/kis_deform_paintop.h
@@ -58,7 +58,7 @@ private:
     DeformOption m_properties;
     KisBrushSizeOptionProperties m_sizeProperties;
 
-    KisAirbrushOptionWidget m_airbrushOptionWidget;
+    KisAirbrushOptionProperties m_airbrushOption;
 
     KisPressureSizeOption m_sizeOption;
     KisPressureOpacityOption m_opacityOption;
