plugins/paintops/sketch/kis_sketch_paintop.h
@@ -74,7 +74,7 @@ private:
     KisDensityOption m_densityOption;
     KisLineWidthOption m_lineWidthOption;
     KisOffsetScaleOption m_offsetScaleOption;
-    KisAirbrushOptionWidget m_airbrushOptionWidget;
+    KisAirbrushOptionProperties m_airbrushOption;
 
     KisBrushOptionProperties m_brushOption;
     SketchProperties m_sketchProperties;
